--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,10 @@ dependencies:
   provider: ^6.1.4
   google_sign_in: ^6.2.1
   flutter_dotenv: ^5.0.2
-  http: ^0.13.5
+  http: ^1.4.0
   firebase_app_check: ^0.3.2+5
   path_provider: ^2.1.5
+  google_generative_ai: ^0.4.7
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,26 @@ flutter:
       - assets\images\AgriTayo - Logo.png
       - assets\images\Union.png
       - assets\images\Title Screen.png
+      - assets\images\Paper.png
+      - assets\images\AgriBot.png
+      - .env
+      - assets\images\chatbotHovered.png
+      - assets\images\chatbot.png
+      - assets\images\Lowlands.png
+      - assets\images\Mountain.png
+      - assets\images\Hill.png
+      - assets\images\thunderstorm.png
+      - assets\images\HarvestTime 1.png
+      - assets\images\flooding.png
+      - assets\images\fertilizer.png
+      - assets\images\El Nino.png
+      - assets\images\cloud.png
+      - assets\images\Locust.png
+      - assets\images\sunny.png
+      - assets\images\shovel.png
+      - assets\images\rain.png
+      - assets\images\pest spray.png
+      - assets\images\typhoon.png
       
 
   # An image asset can refer to one or more resolution-specific "variants", see
