--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: agritayo
 description: "Application for the solution Challenge 2025"
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.0
+version: 1.3.0
 
 environment:
   sdk: ^3.7.2
@@ -34,6 +34,11 @@ dependencies:
   firebase_app_check: ^0.3.2+5
   path_provider: ^2.1.5
   google_generative_ai: ^0.4.7
+  url_launcher: ^6.3.1
+  # google_maps_flutter: ^2.5.0
+  # geolocator: ^10.1.0
+  # geocoding: ^2.1.1
+  # permission_handler: ^10.4.0
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +93,7 @@ flutter:
       - assets\images\typhoon.png
       - assets\images\Profile_ManageProducts.png
       - assets\images\messenger.png
+      - assets\images\avatar.png
       
 
   # An image asset can refer to one or more resolution-specific "variants", see
